# japanese_tts_ros

./: CMakeLists.txt  README.md  package.xml
action/: Speak.action
nodes/: japanese_text_to_speech  test_client
