<?xml version="1.0"?>
<package format="2">
  <name>japanese_text_to_speech</name>
  <version>0.1.0</version>
  <description>The japanese_text_to_speech package</description>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  <url type="website">https://aisl-serv6.aisl.cs.tut.ac.jp:20443/b2_project/japanese_text_to_speech</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>rospy</exec_depend>
</package>
