<?xml version="1.0"?>
<package format="2">
  <name>japanese_text_to_speech</name>
  <version>0.1.0</version>
  <description>The japanese_text_to_speech package</description>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/ActiveIntelligentSystemsLab/japanese_tts_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>rospy</exec_depend>
</package>
